# web3-assistabt-chroma-service

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
docs/: diagram.mermaid
src/config/: settings.py
src/io/: clean_text.py  extract_data.py  models.py  parse_html.py  parse_tg_html.py
src/storage/: chroma_service.py  chunking.py  vector_store.py
src/vector_storage/: chroma_service.py  chunking.py  embeddings.py  vector_storage.py
