[project]
name = "vector-stor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "chromadb>=1.0.4",
    "emoji>=2.14.1",
    "fastapi>=0.115.9",
    "langchain>=0.3.23",
    "langchain-openai>=0.3.12",
    "lxml>=5.3.2",
    "markdownify>=1.1.0",
    "openai>=1.73.0",
    "pydantic>=2.11.3",
    "pydantic-settings>=2.8.1",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "html5lib>=1.1",
    "ipykernel>=6.29.5",
    "isort>=6.0.1",
]
