[project]
name = "vector-stor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.11.16",
    "bs4>=0.0.2",
    "chromadb>=1.0.4",
    "emoji>=2.14.1",
    "fastapi>=0.115.9",
    "langchain>=0.3.23",
    "langchain-openai>=0.3.12",
    "lxml>=5.3.2",
    "markdown>=3.8",
    "markdownify>=1.1.0",
    "openai>=1.73.0",
    "pydantic>=2.11.3",
    "pydantic-settings>=2.8.1",
    "uvicorn>=0.34.0",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "ipykernel>=6.29.5",
    "isort>=6.0.1",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
